--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "minimal_ui_theme",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "animate.css": "^4.1.1",
+    "bulma": "^0.9.4",
     "jquery": "^3.6.1"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "@babel/core": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.19.1",
+    "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "eslint": "^8.23.1",
     "eslint-config-standard": "^17.0.0",
